switch to use RecursiveTextSplitter and api key

--- a/notebooks/integrations/amazon-bedrock/langchain-qa-example.ipynb
+++ b/notebooks/integrations/amazon-bedrock/langchain-qa-example.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "IQt5lMKvxios"
+      },
       "source": [
         "# Use Amazon Bedrock\n",
         "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/integrations/amazon-bedrock/langchain-qa-example.ipynb)\n",
@@ -24,22 +13,24 @@
         "\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "IQt5lMKvxios"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Install packages and import modules"
-      ],
       "metadata": {
         "id": "fWuHgEHjyRMt"
-      }
+      },
+      "source": [
+        "## Install packages and import modules"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "7byqCX6VyWYW"
+      },
+      "outputs": [],
       "source": [
         "# install packages\n",
         "!python3 -m pip install -qU langchain elasticsearch boto3\n",
@@ -48,43 +39,42 @@
         "from getpass import getpass\n",
         "from urllib.request import urlopen\n",
         "from langchain.vectorstores import ElasticsearchStore\n",
-        "from langchain.text_splitter import CharacterTextSplitter\n",
         "from langchain.embeddings.bedrock import BedrockEmbeddings\n",
         "from langchain.llms import Bedrock\n",
         "from langchain.chains import RetrievalQA\n",
         "import boto3\n",
         "import json"
-      ],
-      "metadata": {
-        "id": "7byqCX6VyWYW"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Note: boto3 is part of AWS SDK for Python and is required to use Bedrock LLM"
-      ],
       "metadata": {
         "id": "bWCXMAi58M3G"
-      }
+      },
+      "source": [
+        "Note: boto3 is part of AWS SDK for Python and is required to use Bedrock LLM"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "F84cH96QqG6_"
+      },
       "source": [
         "## Init Bedrock client\n",
         "\n",
         "To authorize in AWS service we can use `~/.aws/config` file with [configuring credentials](https://boto3.amazonaws.com/v1/documentation/api/latest/guide/credentials.html#configuring-credentials) or pass `AWS_ACCESS_KEY`, `AWS_SECRET_KEY`, `AWS_REGION` to boto3 module.\n",
         "\n",
         "We're using second approach for our example."
-      ],
-      "metadata": {
-        "id": "F84cH96QqG6_"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "kG76APtmp6dH"
+      },
+      "outputs": [],
       "source": [
         "default_region = \"us-east-1\"\n",
         "AWS_ACCESS_KEY = getpass(\"AWS Acces key: \")\n",
@@ -97,15 +87,13 @@
         "    aws_access_key_id=AWS_ACCESS_KEY,\n",
         "    aws_secret_access_key=AWS_SECRET_KEY\n",
         ")"
-      ],
-      "metadata": {
-        "id": "kG76APtmp6dH"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Utg-ZqS_QS1G"
+      },
       "source": [
         "## Connect to Elasticsearch\n",
         "\n",
@@ -117,64 +105,64 @@
         "We will use [ElasticsearchStore](https://api.python.langchain.com/en/latest/vectorstores/langchain.vectorstores.elasticsearch.ElasticsearchStore.html) to connect to our elastic cloud deployment. This would help create and index data easily. In the ElasticsearchStore instance, will set embedding to [BedrockEmbeddings](https://api.python.langchain.com/en/latest/embeddings/langchain.embeddings.bedrock.BedrockEmbeddings.html) to embed the texts and elasticsearch index name that will be used in this example. In the instance, we will set `strategy` to [ElasticsearchStore.SparseVectorRetrievalStrategy()](https://api.python.langchain.com/en/latest/vectorstores/langchain.vectorstores.elasticsearch.SparseRetrievalStrategy.html#langchain.vectorstores.elasticsearch.SparseRetrievalStrategy) as we use this strategy to split documents.\n",
         "\n",
         "As we're using [ELSER](https://www.elastic.co/guide/en/machine-learning/current/ml-nlp-elser.html) we use [SparseVectorRetrievalStrategy](https://python.langchain.com/docs/integrations/vectorstores/elasticsearch#sparsevectorretrievalstrategy-elser) strategy. This strategy uses Elasticsearch's sparse vector retrieval to retrieve the top-k results. There is more other [strategies](https://python.langchain.com/docs/integrations/vectorstores/elasticsearch#approxretrievalstrategy) in langchain that might be used base on your needs."
-      ],
-      "metadata": {
-        "id": "Utg-ZqS_QS1G"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "idJiMEZpQfP7"
+      },
+      "outputs": [],
       "source": [
-        "# set elastic cloud id and password\n",
-        "CLOUD_ID = getpass(\"Elastic deployment Cloud ID: \")\n",
-        "CLOUD_USERNAME = \"elastic\"\n",
-        "CLOUD_PASSWORD = getpass(\"Elastic deployment Password: \")\n",
+        "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#finding-your-cloud-id\n",
+        "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
+        "\n",
+        "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#creating-an-api-key\n",
+        "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
         "\n",
         "embeddings = BedrockEmbeddings(client=bedrock_client)\n",
         "\n",
         "vector_store = ElasticsearchStore(\n",
-        "    es_cloud_id=CLOUD_ID,\n",
-        "    es_user=CLOUD_USERNAME,\n",
-        "    es_password=CLOUD_PASSWORD,\n",
+        "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
+        "    es_api_key=ELASTIC_API_KEY,\n",
         "    index_name= \"workplace_index\",\n",
         "    embedding=embeddings,\n",
         "    strategy=ElasticsearchStore.SparseVectorRetrievalStrategy()\n",
         ")"
-      ],
-      "metadata": {
-        "id": "idJiMEZpQfP7"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "qAkNwd_lQ7HZ"
+      },
       "source": [
         "## Download the dataset\n",
         "\n",
         "Let's download the sample dataset and deserialize the document."
-      ],
-      "metadata": {
-        "id": "qAkNwd_lQ7HZ"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "sjwpw_IxQ72L"
+      },
+      "outputs": [],
       "source": [
-        "url = \"https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/example-apps/workplace-search/data/data.json\"\n",
+        "url = \"https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/example-apps/chatbot-rag-app/data/data.json\"\n",
         "\n",
         "response = urlopen(url)\n",
         "\n",
         "workplace_docs = json.loads(response.read())"
-      ],
-      "metadata": {
-        "id": "sjwpw_IxQ72L"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "YWCTPOgnRHiZ"
+      },
       "source": [
         "## Split Documents into Passages\n",
         "\n",
@@ -183,14 +171,18 @@
         "Here we are chunking documents into 500 token passages with an overlap of 0 tokens.\n",
         "\n",
         "Here we are using a simple splitter but Langchain offers more advanced splitters to reduce the chance of context being lost."
-      ],
-      "metadata": {
-        "id": "YWCTPOgnRHiZ"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "mAtGD7GjRIIf"
+      },
+      "outputs": [],
       "source": [
+        "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+        "\n",
         "metadata = []\n",
         "content = []\n",
         "\n",
@@ -202,17 +194,15 @@
         "      \"rolePermissions\":doc[\"rolePermissions\"]\n",
         "  })\n",
         "\n",
-        "text_splitter = CharacterTextSplitter(chunk_size=800, chunk_overlap=400)\n",
+        "text_splitter = RecursiveCharacterTextSplitter.from_tiktoken_encoder(chunk_size=512, chunk_overlap=256)\n",
         "docs = text_splitter.create_documents(content, metadatas=metadata)"
-      ],
-      "metadata": {
-        "id": "mAtGD7GjRIIf"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "MRXt1tnXRK_M"
+      },
       "source": [
         "## Index data into elasticsearch\n",
         "\n",
@@ -221,42 +211,43 @@
         "In the instance, we will set `strategy` to [ElasticsearchStore.SparseVectorRetrievalStrategy()](https://api.python.langchain.com/en/latest/vectorstores/langchain.vectorstores.elasticsearch.SparseRetrievalStrategy.html#langchain.vectorstores.elasticsearch.SparseRetrievalStrategy)\n",
         "\n",
         "Note: Before we begin indexing, ensure you have [downloaded and deployed ELSER model](https://www.elastic.co/guide/en/machine-learning/current/ml-nlp-elser.html#download-deploy-elser) in your deployment and is running in ml node.\n"
-      ],
-      "metadata": {
-        "id": "MRXt1tnXRK_M"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "documents = vector_store.from_documents(\n",
-        "    docs,\n",
-        "    es_cloud_id=CLOUD_ID,\n",
-        "    es_user=CLOUD_USERNAME,\n",
-        "    es_password=CLOUD_PASSWORD,\n",
-        "    index_name=\"workplace_index\",\n",
-        "    strategy=ElasticsearchStore.SparseVectorRetrievalStrategy()\n",
-        ")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "-T2P8_ltRNgy"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "documents = vector_store.from_documents(\n",
+        "    docs,\n",
+        "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
+        "    es_api_key=ELASTIC_API_KEY,\n",
+        "    index_name=\"workplace_index\",\n",
+        "    strategy=ElasticsearchStore.SparseVectorRetrievalStrategy()\n",
+        ")"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "azqaOaChswVv"
+      },
       "source": [
         "## Init Bedrock LLM\n",
         "\n",
         "Next, we will initialize Bedrock LLM. In the Bedrock instance, will pass `bedrock_client` and specific `model_id`: `amazon.titan-text-express-v1`, `ai21.j2-ultra-v1`, `anthropic.claude-v2`, `cohere.command-text-v14` or etc. You can see list of available base models on [Amazon Bedrock User Guide](https://docs.aws.amazon.com/bedrock/latest/userguide/model-ids-arns.html)"
-      ],
-      "metadata": {
-        "id": "azqaOaChswVv"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "fRtZ_dfXsjaL"
+      },
+      "outputs": [],
       "source": [
         "default_model_id = \"amazon.titan-text-express-v1\"\n",
         "AWS_MODEL_ID = input(f\"AWS model [default: {default_model_id}]: \") or default_model_id\n",
@@ -264,54 +255,21 @@
         "    client=bedrock_client,\n",
         "    model_id=AWS_MODEL_ID\n",
         ")"
-      ],
-      "metadata": {
-        "id": "fRtZ_dfXsjaL"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "9UZskhJRRTQV"
+      },
       "source": [
         "## Asking a question\n",
         "Now that we have the passages stored in Elasticsearch and llm is initialized, we can now ask a question to get the relevant passages.\n"
-      ],
-      "metadata": {
-        "id": "9UZskhJRRTQV"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "retriever = vector_store.as_retriever()\n",
-        "\n",
-        "qa = RetrievalQA.from_llm(\n",
-        "    llm=llm,\n",
-        "    retriever=retriever,\n",
-        "    return_source_documents=True\n",
-        ")\n",
-        "\n",
-        "questions = [\n",
-        "    'What is the nasa sales team?',\n",
-        "    'What is our work from home policy?',\n",
-        "    'Does the company own my personal project?',\n",
-        "    'What job openings do we have?',\n",
-        "    'How does compensation work?'\n",
-        "]\n",
-        "question = questions[1]\n",
-        "print(f\"Question: {question}\\n\")\n",
-        "\n",
-        "ans = qa({\"query\": question})\n",
-        "\n",
-        "print(\"\\033[92m ---- Answer ---- \\033[0m\")\n",
-        "print(ans[\"result\"] + \"\\n\")\n",
-        "print(\"\\033[94m ---- Sources ---- \\033[0m\")\n",
-        "for doc in ans[\"source_documents\"]:\n",
-        "  print(\"Name: \" + doc.metadata[\"name\"])\n",
-        "  print(\"Content: \"+ doc.page_content)\n",
-        "  print(\"-------\\n\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -319,11 +277,10 @@
         "id": "gWGfbz2TkuJt",
         "outputId": "12af9c94-9113-4f34-b9de-f60681951206"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Question: What is our work from home policy?\n",
             "\n",
@@ -379,7 +336,50 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "retriever = vector_store.as_retriever()\n",
+        "\n",
+        "qa = RetrievalQA.from_llm(\n",
+        "    llm=llm,\n",
+        "    retriever=retriever,\n",
+        "    return_source_documents=True\n",
+        ")\n",
+        "\n",
+        "questions = [\n",
+        "    'What is the nasa sales team?',\n",
+        "    'What is our work from home policy?',\n",
+        "    'Does the company own my personal project?',\n",
+        "    'What job openings do we have?',\n",
+        "    'How does compensation work?'\n",
+        "]\n",
+        "question = questions[1]\n",
+        "print(f\"Question: {question}\\n\")\n",
+        "\n",
+        "ans = qa({\"query\": question})\n",
+        "\n",
+        "print(\"\\033[92m ---- Answer ---- \\033[0m\")\n",
+        "print(ans[\"result\"] + \"\\n\")\n",
+        "print(\"\\033[94m ---- Sources ---- \\033[0m\")\n",
+        "for doc in ans[\"source_documents\"]:\n",
+        "  print(\"Name: \" + doc.metadata[\"name\"])\n",
+        "  print(\"Content: \"+ doc.page_content)\n",
+        "  print(\"-------\\n\")"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
