--- a/notebooks/integrations/openai/openai-KNN-RAG.ipynb
+++ b/notebooks/integrations/openai/openai-KNN-RAG.ipynb
@@ -76,11 +76,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CLOUD_ID = getpass(\"Elastic deployment Cloud ID\")\n",
-    "CLOUD_PASSWORD = getpass(\"Elastic deployment Password\")\n",
+    "\n",
+    "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#finding-your-cloud-id\n",
+    "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
+    "\n",
+    "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#creating-an-api-key\n",
+    "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
+    "\n",
     "client = Elasticsearch(\n",
-    "  cloud_id = CLOUD_ID,\n",
-    "  basic_auth=(\"elastic\", CLOUD_PASSWORD) # Alternatively use `api_key` instead of `basic_auth`\n",
+    "  cloud_id = ELASTIC_CLOUD_ID,\n",
+    "  api_key=ELASTIC_API_KEY\n",
     ")\n",
     "\n",
     "# Test connection to Elasticsearch\n",
@@ -282,8 +287,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get OpenAI API key\n",
-    "OPENAI_API_KEY = getpass(\"Enter OpenAI API key\")\n",
+    "# https://platform.openai.com/api-keys\n",
+    "OPENAI_API_KEY = getpass(\"OpenAI API key: \")\n",
     "\n",
     "# Set API key\n",
     "openai.api_key = OPENAI_API_KEY\n",
