--- a/notebooks/langchain/langchain-vector-store-using-elser.ipynb
+++ b/notebooks/langchain/langchain-vector-store-using-elser.ipynb
@@ -39,7 +39,7 @@
     "from getpass import getpass\n",
     "from langchain.vectorstores import ElasticsearchStore\n",
     "from urllib.request import urlopen\n",
-    "from langchain.text_splitter import CharacterTextSplitter\n",
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "import json"
    ]
   },
@@ -63,16 +63,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set elastic cloud id and password\n",
     "\n",
-    "CLOUD_ID = getpass(\"Elastic deployment Cloud ID\")\n",
-    "CLOUD_USERNAME = \"elastic\"\n",
-    "CLOUD_PASSWORD = getpass(\"Elastic deployment Password\")\n",
+    "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#finding-your-cloud-id\n",
+    "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
     "\n",
+    "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#creating-an-api-key\n",
+    "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
     "\n",
-    "vector_store = ElasticsearchStore(es_cloud_id=CLOUD_ID, es_user=CLOUD_USERNAME, es_password=CLOUD_PASSWORD,\n",
-    "            index_name= \"workplace_index\",\n",
-    "        )\n"
+    "# https://platform.openai.com/api-keys\n",
+    "OPENAI_API_KEY = getpass(\"OpenAI API key: \")\n",
+    "\n",
+    "vector_store = ElasticsearchStore(\n",
+    "  es_cloud_id=ELASTIC_CLOUD_ID, \n",
+    "  es_api_key=ELASTIC_API_KEY,\n",
+    "  index_name= \"workplace_index\",\n",
+    ")"
    ]
   },
   {
@@ -90,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/example-apps/workplace-search/data/data.json\"\n",
+    "url = \"https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/example-apps/chatbot-rag-app/data/data.json\"\n",
     "\n",
     "response = urlopen(url)\n",
     "\n",
@@ -124,7 +129,7 @@
     "      \"rolePermissions\":doc[\"rolePermissions\"]\n",
     "  })\n",
     "\n",
-    "text_splitter = CharacterTextSplitter(chunk_size=500, chunk_overlap=0)\n",
+    "text_splitter = RecursiveCharacterTextSplitter.from_tiktoken_encoder(chunk_size=512, chunk_overlap=256)\n",
     "docs = text_splitter.create_documents(content, metadatas=metadata)"
    ]
   },
@@ -148,7 +153,10 @@
    "outputs": [],
    "source": [
     "documents = vector_store.from_documents(\n",
-    "    docs, es_cloud_id=CLOUD_ID, es_user=CLOUD_USERNAME, es_password=CLOUD_PASSWORD, index_name=\"workplace_index\",\n",
+    "    docs, \n",
+    "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
+    "    es_api_key=ELASTIC_API_KEY,\n",
+    "    index_name=\"workplace_index\",\n",
     "    strategy=ElasticsearchStore.SparseVectorRetrievalStrategy(model_id = \".elser_model_2\")\n",
     ")"
    ]
