--- a/notebooks/langchain/langchain-vector-store.ipynb
+++ b/notebooks/langchain/langchain-vector-store.ipynb
@@ -32,7 +32,7 @@
     "from langchain.vectorstores import ElasticsearchStore\n",
     "from langchain.embeddings.openai import OpenAIEmbeddings\n",
     "from urllib.request import urlopen\n",
-    "from langchain.text_splitter import CharacterTextSplitter\n",
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "import json"
    ]
   },
@@ -56,21 +56,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set elastic cloud id and password\n",
     "\n",
-    "CLOUD_ID = getpass(\"Elastic deployment Cloud ID\")\n",
-    "CLOUD_USERNAME = \"elastic\"\n",
-    "CLOUD_PASSWORD = getpass(\"Elastic deployment Password\")\n",
+    "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#finding-your-cloud-id\n",
+    "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
     "\n",
-    "# set OpenAI API key\n",
-    "OPENAI_API_KEY = getpass(\"OpenAI API key\")\n",
+    "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#creating-an-api-key\n",
+    "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
+    "\n",
+    "# https://platform.openai.com/api-keys\n",
+    "OPENAI_API_KEY = getpass(\"OpenAI API key: \")\n",
     "\n",
     "embeddings = OpenAIEmbeddings(openai_api_key=OPENAI_API_KEY)\n",
     "\n",
-    "vector_store = ElasticsearchStore(es_cloud_id=CLOUD_ID, es_user=CLOUD_USERNAME, es_password=CLOUD_PASSWORD,\n",
-    "            index_name= \"workplace_index\",\n",
-    "            embedding=embeddings\n",
-    "        )\n"
+    "vector_store = ElasticsearchStore(\n",
+    "  es_cloud_id=ELASTIC_CLOUD_ID, \n",
+    "  es_api_key=ELASTIC_API_KEY,\n",
+    "  index_name= \"workplace_index\", \n",
+    "  embedding=embeddings\n",
+    ")\n"
    ]
   },
   {
@@ -88,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/example-apps/workplace-search/data/data.json\"\n",
+    "url = \"https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/example-apps/chatbot-rag-app/data/data.json\"\n",
     "\n",
     "response = urlopen(url)\n",
     "\n",
@@ -122,7 +125,7 @@
     "      \"rolePermissions\":doc[\"rolePermissions\"],\n",
     "  })\n",
     "\n",
-    "text_splitter = CharacterTextSplitter(chunk_size=800, chunk_overlap=0)\n",
+    "text_splitter = RecursiveCharacterTextSplitter.from_tiktoken_encoder(chunk_size=512, chunk_overlap=256)\n",
     "docs = text_splitter.create_documents(content, metadatas=metadata)"
    ]
   },
@@ -144,7 +147,11 @@
    "outputs": [],
    "source": [
     "documents = vector_store.from_documents(\n",
-    "    docs, embeddings, es_cloud_id=CLOUD_ID, es_user=CLOUD_USERNAME, es_password=CLOUD_PASSWORD, index_name=\"workplace_index\"\n",
+    "    docs, \n",
+    "    embeddings, \n",
+    "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
+    "    es_api_key=ELASTIC_API_KEY,\n",
+    "    index_name=\"workplace_index\"\n",
     ")"
    ]
   },
