--- a/notebooks/search/01-keyword-querying-filtering.ipynb
+++ b/notebooks/search/01-keyword-querying-filtering.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "from elasticsearch import Elasticsearch\n",
-    "import getpass"
+    "from getpass import getpass "
    ]
   },
   {
@@ -50,23 +50,20 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Cloud ID:  ········\n",
-      "Password:  ········\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cloud_id = getpass.getpass('Elastic Cloud ID: ')\n",
-    "elastic_username = 'elastic'\n",
-    "elastic_password = getpass.getpass('Elastic Password: ')\n",
+    "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#finding-your-cloud-id\n",
+    "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
+    "\n",
+    "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#creating-an-api-key\n",
+    "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
+    "\n",
+    "# Create the client instance\n",
     "client = Elasticsearch(\n",
-    "    cloud_id=cloud_id,\n",
-    "    basic_auth=(elastic_username, elastic_password)\n",
+    "    # For local development\n",
+    "    # hosts=[\"http://localhost:9200\"] \n",
+    "    cloud_id=ELASTIC_CLOUD_ID,\n",
+    "    api_key=ELASTIC_API_KEY,\n",
     ")"
    ]
   },
@@ -155,7 +152,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: OkQoKosB_0mMvhlcQ6ce\n",
+      "ID: HwOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2019-10-29\n",
       "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
       "Summary: A guide to pragmatic programming for software engineers and developers\n",
@@ -164,7 +161,7 @@
       "Authors: ['andrew hunt', 'david thomas']\n",
       "Score: 0.7042277\n",
       "\n",
-      "ID: O0QoKosB_0mMvhlcQ6ce\n",
+      "ID: IAOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2019-05-03\n",
       "Title: Python Crash Course\n",
       "Summary: A fast-paced, no-nonsense guide to programming in Python\n",
@@ -173,7 +170,7 @@
       "Authors: ['eric matthes']\n",
       "Score: 0.7042277\n",
       "\n",
-      "ID: QUQoKosB_0mMvhlcQ6ce\n",
+      "ID: JgOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2011-05-13\n",
       "Title: The Clean Coder: A Code of Conduct for Professional Programmers\n",
       "Summary: A guide to professional conduct in the field of software engineering\n",
@@ -182,7 +179,7 @@
       "Authors: ['robert c. martin']\n",
       "Score: 0.6771651\n",
       "\n",
-      "ID: PUQoKosB_0mMvhlcQ6ce\n",
+      "ID: IgOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2008-08-11\n",
       "Title: Clean Code: A Handbook of Agile Software Craftsmanship\n",
       "Summary: A guide to writing code that is easy to read, understand and maintain\n",
@@ -191,7 +188,7 @@
       "Authors: ['robert c. martin']\n",
       "Score: 0.62883455\n",
       "\n",
-      "ID: QEQoKosB_0mMvhlcQ6ce\n",
+      "ID: JQOa7osBiUNHLMdf3q2r\n",
       "Publication date: 1994-10-31\n",
       "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
       "Summary: Guide to design patterns that can be used in any object-oriented language\n",
@@ -244,7 +241,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: P0QoKosB_0mMvhlcQ6ce\n",
+      "ID: JAOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2018-12-04\n",
       "Title: Eloquent JavaScript\n",
       "Summary: A modern introduction to programming\n",
@@ -253,7 +250,7 @@
       "Authors: ['marijn haverbeke']\n",
       "Score: 2.0307527\n",
       "\n",
-      "ID: QkQoKosB_0mMvhlcQ6ce\n",
+      "ID: JwOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2008-05-15\n",
       "Title: JavaScript: The Good Parts\n",
       "Summary: A deep dive into the parts of JavaScript that are essential to writing maintainable code\n",
@@ -262,7 +259,7 @@
       "Authors: ['douglas crockford']\n",
       "Score: 1.7064086\n",
       "\n",
-      "ID: PkQoKosB_0mMvhlcQ6ce\n",
+      "ID: IwOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2015-03-27\n",
       "Title: You Don't Know JS: Up & Going\n",
       "Summary: Introduction to JavaScript and programming as a whole\n",
@@ -310,7 +307,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: P0QoKosB_0mMvhlcQ6ce\n",
+      "ID: JAOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2018-12-04\n",
       "Title: Eloquent JavaScript\n",
       "Summary: A modern introduction to programming\n",
@@ -319,7 +316,7 @@
       "Authors: ['marijn haverbeke']\n",
       "Score: 6.0922585\n",
       "\n",
-      "ID: QkQoKosB_0mMvhlcQ6ce\n",
+      "ID: JwOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2008-05-15\n",
       "Title: JavaScript: The Good Parts\n",
       "Summary: A deep dive into the parts of JavaScript that are essential to writing maintainable code\n",
@@ -328,7 +325,7 @@
       "Authors: ['douglas crockford']\n",
       "Score: 5.1192265\n",
       "\n",
-      "ID: PkQoKosB_0mMvhlcQ6ce\n",
+      "ID: IwOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2015-03-27\n",
       "Title: You Don't Know JS: Up & Going\n",
       "Summary: Introduction to JavaScript and programming as a whole\n",
@@ -380,7 +377,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: OkQoKosB_0mMvhlcQ6ce\n",
+      "ID: HwOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2019-10-29\n",
       "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
       "Summary: A guide to pragmatic programming for software engineers and developers\n",
@@ -389,7 +386,7 @@
       "Authors: ['andrew hunt', 'david thomas']\n",
       "Score: 1.4816045\n",
       "\n",
-      "ID: QEQoKosB_0mMvhlcQ6ce\n",
+      "ID: JQOa7osBiUNHLMdf3q2r\n",
       "Publication date: 1994-10-31\n",
       "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
       "Summary: Guide to design patterns that can be used in any object-oriented language\n",
@@ -431,7 +428,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: PUQoKosB_0mMvhlcQ6ce\n",
+      "ID: IgOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2008-08-11\n",
       "Title: Clean Code: A Handbook of Agile Software Craftsmanship\n",
       "Summary: A guide to writing code that is easy to read, understand and maintain\n",
@@ -440,7 +437,7 @@
       "Authors: ['robert c. martin']\n",
       "Score: 1.0\n",
       "\n",
-      "ID: QEQoKosB_0mMvhlcQ6ce\n",
+      "ID: JQOa7osBiUNHLMdf3q2r\n",
       "Publication date: 1994-10-31\n",
       "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
       "Summary: Guide to design patterns that can be used in any object-oriented language\n",
@@ -449,7 +446,7 @@
       "Authors: ['erich gamma', 'richard helm', 'ralph johnson', 'john vlissides']\n",
       "Score: 1.0\n",
       "\n",
-      "ID: QkQoKosB_0mMvhlcQ6ce\n",
+      "ID: JwOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2008-05-15\n",
       "Title: JavaScript: The Good Parts\n",
       "Summary: A deep dive into the parts of JavaScript that are essential to writing maintainable code\n",
@@ -500,7 +497,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: P0QoKosB_0mMvhlcQ6ce\n",
+      "ID: JAOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2018-12-04\n",
       "Title: Eloquent JavaScript\n",
       "Summary: A modern introduction to programming\n",
@@ -509,7 +506,7 @@
       "Authors: ['marijn haverbeke']\n",
       "Score: 1.0\n",
       "\n",
-      "ID: QkQoKosB_0mMvhlcQ6ce\n",
+      "ID: JwOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2008-05-15\n",
       "Title: JavaScript: The Good Parts\n",
       "Summary: A deep dive into the parts of JavaScript that are essential to writing maintainable code\n",
@@ -570,7 +567,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: P0QoKosB_0mMvhlcQ6ce\n",
+      "ID: JAOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2018-12-04\n",
       "Title: Eloquent JavaScript\n",
       "Summary: A modern introduction to programming\n",
@@ -579,7 +576,7 @@
       "Authors: ['marijn haverbeke']\n",
       "Score: 1.6246022\n",
       "\n",
-      "ID: QkQoKosB_0mMvhlcQ6ce\n",
+      "ID: JwOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2008-05-15\n",
       "Title: JavaScript: The Good Parts\n",
       "Summary: A deep dive into the parts of JavaScript that are essential to writing maintainable code\n",
@@ -638,7 +635,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: QEQoKosB_0mMvhlcQ6ce\n",
+      "ID: JQOa7osBiUNHLMdf3q2r\n",
       "Publication date: 1994-10-31\n",
       "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
       "Summary: Guide to design patterns that can be used in any object-oriented language\n",
@@ -695,7 +692,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: QkQoKosB_0mMvhlcQ6ce\n",
+      "ID: JwOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2008-05-15\n",
       "Title: JavaScript: The Good Parts\n",
       "Summary: A deep dive into the parts of JavaScript that are essential to writing maintainable code\n",
@@ -704,7 +701,7 @@
       "Authors: ['douglas crockford']\n",
       "Score: 2.3070245\n",
       "\n",
-      "ID: OkQoKosB_0mMvhlcQ6ce\n",
+      "ID: HwOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2019-10-29\n",
       "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
       "Summary: A guide to pragmatic programming for software engineers and developers\n",
@@ -713,7 +710,7 @@
       "Authors: ['andrew hunt', 'david thomas']\n",
       "Score: 1.4816045\n",
       "\n",
-      "ID: QEQoKosB_0mMvhlcQ6ce\n",
+      "ID: JQOa7osBiUNHLMdf3q2r\n",
       "Publication date: 1994-10-31\n",
       "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
       "Summary: Guide to design patterns that can be used in any object-oriented language\n",
@@ -787,7 +784,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: PUQoKosB_0mMvhlcQ6ce\n",
+      "ID: IgOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2008-08-11\n",
       "Title: Clean Code: A Handbook of Agile Software Craftsmanship\n",
       "Summary: A guide to writing code that is easy to read, understand and maintain\n",
@@ -796,7 +793,7 @@
       "Authors: ['robert c. martin']\n",
       "Score: 0.0\n",
       "\n",
-      "ID: QUQoKosB_0mMvhlcQ6ce\n",
+      "ID: JgOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2011-05-13\n",
       "Title: The Clean Coder: A Code of Conduct for Professional Programmers\n",
       "Summary: A guide to professional conduct in the field of software engineering\n",
@@ -839,7 +836,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: PUQoKosB_0mMvhlcQ6ce\n",
+      "ID: IgOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2008-08-11\n",
       "Title: Clean Code: A Handbook of Agile Software Craftsmanship\n",
       "Summary: A guide to writing code that is easy to read, understand and maintain\n",
@@ -848,7 +845,7 @@
       "Authors: ['robert c. martin']\n",
       "Score: 0.0\n",
       "\n",
-      "ID: QkQoKosB_0mMvhlcQ6ce\n",
+      "ID: JwOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2008-05-15\n",
       "Title: JavaScript: The Good Parts\n",
       "Summary: A deep dive into the parts of JavaScript that are essential to writing maintainable code\n",
@@ -895,7 +892,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: QkQoKosB_0mMvhlcQ6ce\n",
+      "ID: JwOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2008-05-15\n",
       "Title: JavaScript: The Good Parts\n",
       "Summary: A deep dive into the parts of JavaScript that are essential to writing maintainable code\n",
@@ -953,7 +950,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.3"
   },
   "vscode": {
    "interpreter": {
