--- a/notebooks/search/06-synonyms-api.ipynb
+++ b/notebooks/search/06-synonyms-api.ipynb
@@ -81,13 +81,18 @@
         "from elasticsearch import Elasticsearch\n",
         "from getpass import getpass\n",
         "\n",
-        "CLOUD_ID = getpass(\"Elastic Cloud ID\")\n",
-        "CLOUD_PASSWORD = getpass(\"Elastic Password\")\n",
+        "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#finding-your-cloud-id\n",
+        "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
+        "\n",
+        "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#creating-an-api-key\n",
+        "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
         "\n",
         "# Create the client instance\n",
         "client = Elasticsearch(\n",
-        "    cloud_id=CLOUD_ID,\n",
-        "    basic_auth=(\"elastic\", CLOUD_PASSWORD)\n",
+        "    # For local development\n",
+        "    # hosts=[\"http://localhost:9200\"] \n",
+        "    cloud_id=ELASTIC_CLOUD_ID,\n",
+        "    api_key=ELASTIC_API_KEY,\n",
         ")"
       ]
     },
