--- a/notebooks/generative-ai/chatbot.ipynb
+++ b/notebooks/generative-ai/chatbot.ipynb
@@ -26,17 +26,20 @@
     "\n",
     "For this example, you will need:\n",
     "\n",
-    "- Python 3.6 or later\n",
     "- An Elastic deployment\n",
     "  - We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html) for this example (available with a [free trial](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook))\n",
     "- OpenAI account\n",
     "\n",
-    "### Create Elastic Cloud deployment\n",
+    "### Use Elastic Cloud\n",
     "\n",
     "If you don't have an Elastic Cloud deployment, follow these steps to create one.\n",
     "\n",
     "1. Go to [Elastic cloud Registration](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook) and sign up for a free trial\n",
-    "2. Select **Create Deployment** and follow the instructions\n"
+    "2. Select **Create Deployment** and follow the instructions\n",
+    "\n",
+    "### Locally install Elasticsearch\n",
+    "\n",
+    "If you prefer to run Elasticsearch locally, the easiest way is to use Docker. See [Install Elasticsearch with Docker](https://www.elastic.co/search-labs/tutorials/install-elasticsearch/docker) for instructions.\n"
    ]
   },
   {
@@ -50,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -61,8 +64,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.2.1\u001b[0m\n",
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "langserve 0.0.21 requires pydantic<2,>=1, but you have pydantic 2.3.0 which is incompatible.\u001b[0m\u001b[31m\n",
+      "\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
@@ -83,15 +88,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from getpass import getpass\n",
     "\n",
+    "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#finding-your-cloud-id\n",
     "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
-    "ELASTIC_USERNAME = getpass(\"Elastic username: \")\n",
-    "ELASTIC_PASSWORD = getpass(\"Elastic password: \")\n",
+    "\n",
+    "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#creating-an-api-key\n",
+    "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
+    "\n",
+    "# https://platform.openai.com/api-keys\n",
     "OPENAI_API_KEY = getpass(\"OpenAI API key: \")"
    ]
   },
@@ -106,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -138,12 +147,12 @@
     "\n",
     "As we're chatting with our bot, it will run semantic searches on the index to find the relevant documents. In order for this to be accurate, we need to split the full documents into small chunks (also called passages). This way the semantic search will find the passage within a document that most likely answers our question.\n",
     "\n",
-    "We'll use LangChain's `CharacterTextSplitter` and split the documents' text at 800 characters with some overlap between chunks.\n"
+    "We'll use LangChain's `RecursiveCharacterTextSplitter` and split the documents' text at 800 characters with some overlap between chunks.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +164,7 @@
     }
    ],
    "source": [
-    "from langchain.text_splitter import CharacterTextSplitter\n",
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "\n",
     "metadata = []\n",
     "content = []\n",
@@ -167,7 +176,7 @@
     "        \"summary\": doc[\"summary\"]\n",
     "    })\n",
     "\n",
-    "text_splitter = CharacterTextSplitter.from_tiktoken_encoder(\n",
+    "text_splitter = RecursiveCharacterTextSplitter.from_tiktoken_encoder(\n",
     "    chunk_size=512,\n",
     "    chunk_overlap=256,\n",
     ")\n",
@@ -185,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,8 +206,7 @@
     "vector_store = ElasticsearchStore.from_documents(\n",
     "    docs,\n",
     "    es_cloud_id=ELASTIC_CLOUD_ID, \n",
-    "    es_user=ELASTIC_USERNAME, \n",
-    "    es_password=ELASTIC_PASSWORD,\n",
+    "    es_api_key=ELASTIC_API_KEY,\n",
     "    index_name=\"workplace-docs\",\n",
     "    embedding=embeddings\n",
     ")"
@@ -215,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,8 +246,7 @@
     "session_id = str(uuid4())\n",
     "chat_history = ElasticsearchChatMessageHistory(\n",
     "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
-    "    es_user=ELASTIC_USERNAME,\n",
-    "    es_password=ELASTIC_PASSWORD,\n",
+    "    es_api_key=ELASTIC_API_KEY,\n",
     "    session_id=session_id,\n",
     "    index=\"workplace-docs-chat-history\"\n",
     ")"
@@ -256,22 +263,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CHAT SESSION ID] 928a7f6a-cd02-4a4d-99a9-13e3486bb6e6\n",
+      "[CHAT SESSION ID] f1ebce0a-edc1-46d6-a65b-f86f8ab15d2f\n",
       "[QUESTION] What does NASA stand for?\n",
       "[ANSWER]   NASA stands for North America South America region.\n",
       "          [SUPPORTING DOCUMENTS] ['Sales Organization Overview', 'Intellectual Property Policy', 'April Work From Home Update', 'New Employee Onboarding Guide']\n",
       "[QUESTION] Which countries are part of it?\n",
       "[ANSWER]   The North America South America region includes the United States, Canada, Mexico, as well as Central and South America.\n",
-      "          [SUPPORTING DOCUMENTS] ['Sales Organization Overview', 'Wfh Policy Update May 2023', 'Fy2024 Company Sales Strategy', 'Fy2024 Company Sales Strategy']\n",
+      "          [SUPPORTING DOCUMENTS] ['Sales Organization Overview', 'Wfh Policy Update May 2023', 'Fy2024 Company Sales Strategy', 'New Employee Onboarding Guide']\n",
       "[QUESTION] Who are the team's leads?\n",
-      "[ANSWER]   The lead of the North America South America region team is Laura Martinez, the Area Vice President of North America, and Gary Johnson, the Area Vice President of South America.\n",
+      "[ANSWER]   Laura Martinez is the Area Vice-President of North America, and Gary Johnson is the Area Vice-President of South America.\n",
       "          [SUPPORTING DOCUMENTS] ['Sales Organization Overview', 'Fy2024 Company Sales Strategy', 'Wfh Policy Update May 2023', 'Fy2024 Company Sales Strategy']\n"
      ]
     }
@@ -327,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +343,7 @@
        "ObjectApiResponse({'acknowledged': True})"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
