--- a/notebooks/integrations/hugging-face/loading-model-from-hugging-face.ipynb
+++ b/notebooks/integrations/hugging-face/loading-model-from-hugging-face.ipynb
@@ -89,9 +89,13 @@
    },
    "outputs": [],
    "source": [
-    "API_KEY = getpass(\"Elastic deployment API Key\")\n",
-    "CLOUD_ID = getpass(\"Elastic deployment Cloud ID\")\n",
-    "!eland_import_hub_model --cloud-id $CLOUD_ID --hub-model-id sentence-transformers/all-MiniLM-L6-v2 --task-type text_embedding --es-api-key $API_KEY --start"
+    "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#finding-your-cloud-id\n",
+    "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
+    "\n",
+    "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#creating-an-api-key\n",
+    "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
+    "\n",
+    "!eland_import_hub_model --cloud-id $ELASTIC_CLOUD_ID --hub-model-id sentence-transformers/all-MiniLM-L6-v2 --task-type text_embedding --es-api-key $ELASTIC_API_KEY --start"
    ]
   },
   {
@@ -119,13 +123,9 @@
    },
    "outputs": [],
    "source": [
-    "# ELASTIC_CLOUD_USERNAME = getpass(\"Elastic username\")\n",
-    "# ELASTIC_CLOUD_PASSWORD = getpass(\"Elastic Password\")\n",
-    "\n",
     "es = Elasticsearch(\n",
-    "  cloud_id=CLOUD_ID,\n",
-    "  #basic_auth=(ELASTIC_CLOUD_USERNAME, ELASTIC_CLOUD_PASSWORD),\n",
-    "  api_key=API_KEY,\n",
+    "  cloud_id=ELASTIC_CLOUD_ID,\n",
+    "  api_key=ELASTIC_API_KEY,\n",
     "  request_timeout=600\n",
     ")\n",
     "\n",
@@ -477,7 +477,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.11.4"
+   "version": "3.9.6"
   },
   "vscode": {
    "interpreter": {
