--- a/notebooks/langchain/langchain-self-query-retriever.ipynb
+++ b/notebooks/langchain/langchain-self-query-retriever.ipynb
@@ -24,9 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!python3 -m pip install -qU lark elasticsearch langchain openai\n",
     "\n",
@@ -50,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,20 +114,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "OPENAI_API_KEY = getpass(\"OpenAI API Key:\")\n",
+    "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#finding-your-cloud-id\n",
+    "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
     "\n",
-    "embeddings = OpenAIEmbeddings()\n",
+    "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#creating-an-api-key\n",
+    "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
     "\n",
-    "CLOUD_ID = getpass(\"Elastic deployment Cloud ID\")\n",
-    "CLOUD_USERNAME = \"elastic\"\n",
-    "CLOUD_PASSWORD = getpass(\"Elastic deployment Password\")\n",
+    "# https://platform.openai.com/api-keys\n",
+    "OPENAI_API_KEY = getpass(\"OpenAI API key: \")\n",
+    "\n",
+    "embeddings = OpenAIEmbeddings(openai_api_key=OPENAI_API_KEY)\n",
+    "\n",
     "\n",
     "vectorstore = ElasticsearchStore.from_documents(\n",
-    "    docs, embeddings, index_name=\"elasticsearch-self-query-demo\", es_cloud_id=CLOUD_ID, es_user=CLOUD_USERNAME, es_password=CLOUD_PASSWORD\n",
+    "    docs, \n",
+    "    embeddings, \n",
+    "    index_name=\"elasticsearch-self-query-demo\", \n",
+    "    es_cloud_id=ELASTIC_CLOUD_ID, \n",
+    "    es_api_key=ELASTIC_API_KEY\n",
     ")\n"
    ]
   },
@@ -134,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +181,7 @@
     "document_content_description = \"Brief summary of a movie\"\n",
     "\n",
     "# Set up openAI llm with sampling temperature 0\n",
-    "llm = OpenAI(temperature=0)\n",
+    "llm = OpenAI(temperature=0, openai_api_key=OPENAI_API_KEY)\n",
     "\n",
     "# instantiate retriever\n",
     "retriever = SelfQueryRetriever.from_llm(\n",
@@ -184,16 +202,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "query='dream' filter=None limit=None\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -203,7 +214,7 @@
        " Document(page_content='A bunch of normal-sized women are supremely wholesome and some men pine after them', metadata={'year': 2019, 'director': 'Greta Gerwig', 'rating': 8.3})]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,23 +237,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "query='Andrei Tarkovsky' filter=Operation(operator=<Operator.AND: 'and'>, arguments=[Comparison(comparator=<Comparator.CONTAIN: 'contain'>, attribute='director', value='Andrei Tarkovsky'), Comparison(comparator=<Comparator.CONTAIN: 'contain'>, attribute='genre', value='science fiction')]) limit=None\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "[Document(page_content='Three men walk into the Zone, three men walk out of the Zone', metadata={'year': 1979, 'rating': 9.9, 'director': 'Andrei Tarkovsky', 'genre': 'science fiction'})]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,16 +295,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "query='dream' filter=None limit=2\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -308,7 +305,7 @@
        " Document(page_content='A psychologist / detective gets lost in a series of dreams within dreams within dreams and Inception reused the idea', metadata={'year': 2006, 'director': 'Satoshi Kon', 'rating': 8.6})]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,23 +328,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "query='dream' filter=Operation(operator=<Operator.AND: 'and'>, arguments=[Comparison(comparator=<Comparator.GT: 'gt'>, attribute='year', value=1992), Comparison(comparator=<Comparator.LT: 'lt'>, attribute='year', value=2007)]) limit=1\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "[Document(page_content='A psychologist / detective gets lost in a series of dreams within dreams within dreams and Inception reused the idea', metadata={'year': 2006, 'director': 'Satoshi Kon', 'rating': 8.6})]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.3"
   },
   "orig_nbformat": 4,
   "vscode": {
