--- a/notebooks/search/00-quick-start.ipynb
+++ b/notebooks/search/00-quick-start.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ffc5fa6f",
    "metadata": {
     "id": "ffc5fa6f"
@@ -105,27 +105,23 @@
     "id": "f38e0397",
     "outputId": "ad6df489-d242-4229-a42a-39c5ca19d124"
    },
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Elastic Cloud ID ········\n",
-      "Elastic Password ········\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from elasticsearch import Elasticsearch\n",
     "from getpass import getpass\n",
     "\n",
-    "CLOUD_ID = getpass(\"Elastic Cloud ID\")\n",
-    "CLOUD_PASSWORD = getpass(\"Elastic Password\")\n",
+    "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#finding-your-cloud-id\n",
+    "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
+    "\n",
+    "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#creating-an-api-key\n",
+    "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
     "\n",
     "# Create the client instance\n",
     "client = Elasticsearch(\n",
-    "    cloud_id=CLOUD_ID,\n",
-    "    basic_auth=(\"elastic\", CLOUD_PASSWORD)\n",
+    "    # For local development\n",
+    "    # hosts=[\"http://localhost:9200\"] \n",
+    "    cloud_id=ELASTIC_CLOUD_ID,\n",
+    "    api_key=ELASTIC_API_KEY,\n",
     ")"
    ]
   },
@@ -151,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "25c618eb",
    "metadata": {
     "colab": {
@@ -165,7 +161,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'instance-0000000001', 'cluster_name': 'ad402eb9a59041458b8edfc021e91caf', 'cluster_uuid': 'ks_HfcCdSf2qrcKZQsk9Lg', 'version': {'number': '8.10.2', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '6d20dd8ce62365be9b1aca96427de4622e970e9e', 'build_date': '2023-09-19T08:16:24.564900370Z', 'build_snapshot': False, 'lucene_version': '9.7.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'}\n"
+      "{'name': 'instance-0000000011', 'cluster_name': 'd1bd36862ce54c7b903e2aacd4cd7f0a', 'cluster_uuid': 'tIkh0X_UQKmMFQKSfUw-VQ', 'version': {'number': '8.9.0', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '8aa461beb06aa0417a231c345a1b8c38fb498a0d', 'build_date': '2023-07-19T14:43:58.555259655Z', 'build_snapshot': False, 'lucene_version': '9.7.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'}\n"
      ]
     }
    ],
@@ -236,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "6bc95238",
    "metadata": {
     "id": "6bc95238"
@@ -248,7 +244,7 @@
        "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'book_index'})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "008d723e",
    "metadata": {
     "id": "008d723e"
@@ -294,10 +290,10 @@
     {
      "data": {
       "text/plain": [
-       "ObjectApiResponse({'errors': False, 'took': 56, 'items': [{'index': {'_index': 'book_index', '_id': 'OkQoKosB_0mMvhlcQ6ce', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 0, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'O0QoKosB_0mMvhlcQ6ce', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 1, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'PEQoKosB_0mMvhlcQ6ce', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 2, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'PUQoKosB_0mMvhlcQ6ce', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 3, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'PkQoKosB_0mMvhlcQ6ce', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 4, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'P0QoKosB_0mMvhlcQ6ce', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 5, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'QEQoKosB_0mMvhlcQ6ce', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 6, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'QUQoKosB_0mMvhlcQ6ce', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 7, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'QkQoKosB_0mMvhlcQ6ce', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 8, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'Q0QoKosB_0mMvhlcQ6ce', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 9, '_primary_term': 1, 'status': 201}}]})"
+       "ObjectApiResponse({'took': 49, 'errors': False, 'items': [{'index': {'_index': 'book_index', '_id': 'HwOa7osBiUNHLMdf3q2r', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 1, 'failed': 0}, '_seq_no': 0, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'IAOa7osBiUNHLMdf3q2r', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 1, 'failed': 0}, '_seq_no': 1, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'IQOa7osBiUNHLMdf3q2r', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 1, 'failed': 0}, '_seq_no': 2, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'IgOa7osBiUNHLMdf3q2r', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 1, 'failed': 0}, '_seq_no': 3, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'IwOa7osBiUNHLMdf3q2r', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 1, 'failed': 0}, '_seq_no': 4, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'JAOa7osBiUNHLMdf3q2r', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 1, 'failed': 0}, '_seq_no': 5, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'JQOa7osBiUNHLMdf3q2r', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 1, 'failed': 0}, '_seq_no': 6, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'JgOa7osBiUNHLMdf3q2r', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 1, 'failed': 0}, '_seq_no': 7, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'JwOa7osBiUNHLMdf3q2r', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 1, 'failed': 0}, '_seq_no': 8, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'KAOa7osBiUNHLMdf3q2r', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 1, 'failed': 0}, '_seq_no': 9, '_primary_term': 1, 'status': 201}}]})"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "f12ce2c9",
    "metadata": {
     "id": "f12ce2c9"
@@ -373,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "Df7hwcIjYwMT",
    "metadata": {
     "colab": {
@@ -388,25 +384,25 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: QkQoKosB_0mMvhlcQ6ce\n",
+      "ID: JwOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2008-05-15\n",
       "Title: JavaScript: The Good Parts\n",
       "Summary: A deep dive into the parts of JavaScript that are essential to writing maintainable code\n",
       "Publisher: oreilly\n",
       "Reviews: 51\n",
       "Authors: ['douglas crockford']\n",
-      "Score: 0.8042828\n",
+      "Score: 0.80428284\n",
       "\n",
-      "ID: PkQoKosB_0mMvhlcQ6ce\n",
+      "ID: IwOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2015-03-27\n",
       "Title: You Don't Know JS: Up & Going\n",
       "Summary: Introduction to JavaScript and programming as a whole\n",
       "Publisher: oreilly\n",
       "Reviews: 36\n",
       "Authors: ['kyle simpson']\n",
-      "Score: 0.69891346\n",
+      "Score: 0.6989136\n",
       "\n",
-      "ID: P0QoKosB_0mMvhlcQ6ce\n",
+      "ID: JAOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2018-12-04\n",
       "Title: Eloquent JavaScript\n",
       "Summary: A modern introduction to programming\n",
@@ -415,16 +411,16 @@
       "Authors: ['marijn haverbeke']\n",
       "Score: 0.6796988\n",
       "\n",
-      "ID: OkQoKosB_0mMvhlcQ6ce\n",
+      "ID: HwOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2019-10-29\n",
       "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
       "Summary: A guide to pragmatic programming for software engineers and developers\n",
       "Publisher: addison-wesley\n",
       "Reviews: 30\n",
       "Authors: ['andrew hunt', 'david thomas']\n",
-      "Score: 0.620655\n",
+      "Score: 0.62065494\n",
       "\n",
-      "ID: Q0QoKosB_0mMvhlcQ6ce\n",
+      "ID: KAOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2012-06-27\n",
       "Title: Introduction to the Theory of Computation\n",
       "Summary: Introduction to the theory of computation and complexity theory\n",
@@ -433,7 +429,7 @@
       "Authors: ['michael sipser']\n",
       "Score: 0.6008769\n",
       "\n",
-      "ID: QUQoKosB_0mMvhlcQ6ce\n",
+      "ID: JgOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2011-05-13\n",
       "Title: The Clean Coder: A Code of Conduct for Professional Programmers\n",
       "Summary: A guide to professional conduct in the field of software engineering\n",
@@ -442,7 +438,7 @@
       "Authors: ['robert c. martin']\n",
       "Score: 0.571234\n",
       "\n",
-      "ID: QEQoKosB_0mMvhlcQ6ce\n",
+      "ID: JQOa7osBiUNHLMdf3q2r\n",
       "Publication date: 1994-10-31\n",
       "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
       "Summary: Guide to design patterns that can be used in any object-oriented language\n",
@@ -451,32 +447,32 @@
       "Authors: ['erich gamma', 'richard helm', 'ralph johnson', 'john vlissides']\n",
       "Score: 0.56499225\n",
       "\n",
-      "ID: PEQoKosB_0mMvhlcQ6ce\n",
+      "ID: IQOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2020-04-06\n",
       "Title: Artificial Intelligence: A Modern Approach\n",
       "Summary: Comprehensive introduction to the theory and practice of artificial intelligence\n",
       "Publisher: pearson\n",
       "Reviews: 39\n",
       "Authors: ['stuart russell', 'peter norvig']\n",
-      "Score: 0.5605484\n",
+      "Score: 0.56054837\n",
       "\n",
-      "ID: PUQoKosB_0mMvhlcQ6ce\n",
+      "ID: IgOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2008-08-11\n",
       "Title: Clean Code: A Handbook of Agile Software Craftsmanship\n",
       "Summary: A guide to writing code that is easy to read, understand and maintain\n",
       "Publisher: prentice hall\n",
       "Reviews: 55\n",
       "Authors: ['robert c. martin']\n",
-      "Score: 0.5422694\n",
+      "Score: 0.54226947\n",
       "\n",
-      "ID: O0QoKosB_0mMvhlcQ6ce\n",
+      "ID: IAOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2019-05-03\n",
       "Title: Python Crash Course\n",
       "Summary: A fast-paced, no-nonsense guide to programming in Python\n",
       "Publisher: no starch press\n",
       "Reviews: 42\n",
       "Authors: ['eric matthes']\n",
-      "Score: 0.52540874\n"
+      "Score: 0.5254088\n"
      ]
     }
    ],
@@ -529,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "WoE0yTchfj3A",
    "metadata": {
     "id": "WoE0yTchfj3A"
@@ -540,16 +536,16 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: OkQoKosB_0mMvhlcQ6ce\n",
+      "ID: HwOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2019-10-29\n",
       "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
       "Summary: A guide to pragmatic programming for software engineers and developers\n",
       "Publisher: addison-wesley\n",
       "Reviews: 30\n",
       "Authors: ['andrew hunt', 'david thomas']\n",
-      "Score: 0.620655\n",
+      "Score: 0.62065494\n",
       "\n",
-      "ID: QEQoKosB_0mMvhlcQ6ce\n",
+      "ID: JQOa7osBiUNHLMdf3q2r\n",
       "Publication date: 1994-10-31\n",
       "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
       "Summary: Guide to design patterns that can be used in any object-oriented language\n",
@@ -599,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.3"
   }
  },
  "nbformat": 4,
